# autoswing

./: .gitignore  MIGRATION.md  PLAN.md  README.md  pyproject.toml
config/: brain-settings.json  config.yaml  manager-settings.json
docker/: .env.example  docker-compose.yml
docs/incidents/: 2026-07-14-reset-orphan-short.md  2026-07-16-stale-lock-blackout.md
prompts/: brain.md  manager.md
scripts/: backup.sh  brain_run.sh  cron.d-autoswing.example  healthcheck.sh  manager_run.sh  migrate-pack.sh  migrate-unpack.sh  send_report.py
src/autoswing/: broker.py  cli.py  config.py  journal.py  manage.py  reconcile.py  risk_gate.py
src/autoswing/data/: candidates.py  earnings.py  prices.py
tests/: test_cli_errors.py  test_data.py  test_manage.py  test_manage_reconcile.py  test_reconcile.py  test_risk_gate.py  test_safety.py
