[project]
name = "autoswing"
version = "0.1.0"
description = "Autonomous swing-trading agent — broker plumbing, risk gate, and journal"
requires-python = ">=3.11"
dependencies = [
    "ib_async>=1.0.1",
    "pyyaml>=6.0",
]

[project.scripts]
autoswing = "autoswing.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoswing"]

[dependency-groups]
dev = ["pytest>=8.0"]
